@@ -1,0 +1,21 @@
+# This is the project specific Settings.yml file.
+# Place Sphinx specific build information here.
+# Settings given here will replace the settings of 'conf.py'.
+
+---
+conf.py:
+  copyright: 2010-2013
+  project: Sphinx Python Documentation Generator and Viewer
+  version: 2.1
+  release: 2.1.0
+  latex_documents:
+  - - Index
+    - egovapi.tex
+    - eGov API (Swiss Federal Administration)
+    - Xavier Perseguers
+    - manual
+  latex_elements:
+    papersize: a4paper
+    pointsize: 10pt
+    preamble: \usepackage{typo3}
+...
