@@ -1,3 +1,7 @@
+2013-09-25  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] #52238: reStructuredText documentation is invisible
+
 2013-01-12  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Raise version to 2.1.0
